Refactor @types into their own file, imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,11 @@
 		"jsx": "react-jsx",
 		"jsxImportSource": "preact",
 		"skipLibCheck": true,
+		"baseUrl": "./src",
 		"paths": {
 			"react": ["./node_modules/preact/compat/"],
-			"react-dom": ["./node_modules/preact/compat/"]
+			"react-dom": ["./node_modules/preact/compat/"],
+			"@types": ["types"]
 		}
 	},
 	"include": ["node_modules/vite/client.d.ts", "**/*"]
